force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_Bookings_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ACV_Bookings_Rollup__c</fullName>
    <label>ACV Bookings Rollup</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.IsACV__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>