force-app/main/default/objects/SBQQ__Quote__c/fields/AE3RoleOnly__c.field-meta.xml
<CustomField>
    <fullName>AE3RoleOnly__c</fullName>
    <formula>OR (
CONTAINS(Owner_Role__c,&apos;AE3 EMEA&apos;),
CONTAINS(Owner_Role__c,&apos;AE3 NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE3RoleOnly</label>
    <type>Checkbox</type>
</CustomField>