force-app/main/default/objects/SBQQ__Quote__c/fields/API_Error_msg__c.field-meta.xml
<CustomField>
    <fullName>API_Error_msg__c</fullName>
    <label>B360 API Error Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>