force-app/main/default/objects/SBQQ__Quote__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>B360 API Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>