force-app/main/default/objects/SBQQ__Quote__c/fields/Approved_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Type__c</fullName>
    <description>If it&apos;s a first purchase</description>
    <formula>TEXT(SBQQ__Account__r.Approved_Payment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Payment Type</label>
    <type>Text</type>
</CustomField>