force-app/main/default/objects/SBQQ__Quote__c/fields/ApprovedProductsCount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProductsCount__c</fullName>
    <label>ApprovedProductsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>