force-app/main/default/objects/SBQQ__Quote__c/fields/Associated_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity_Probability__c</fullName>
    <formula>SBQQ__Opportunity2__r.Probability</formula>
    <label>Associated Opportunity Probability (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>