force-app/main/default/objects/SBQQ__Quote__c/fields/Associated_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity_Type__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Opportunity Type</label>
    <type>Text</type>
</CustomField>