force-app/main/default/objects/SBQQ__Quote__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <formula>ROUND(
Quote_Subtotal__c
+ Total_Estimated_Installation_Costs__c
+ IF(
NOT(AND(
ISPICKVAL(Finance_Partner__c, &quot;&quot;),
ISBLANK(Finance_Partner_Account__c)
)),
Competitor_Buyout_Amount__c,
0
)
+ IF(
!ISBLANK(Shipping_Address_NEW__c),
Sales_Tax__c
+ IF(
Shipping_and_Handling__c != 99999.99,
Shipping_and_Handling__c + X3rd_Party_Products_Services__c,
0
)
- IF(
NOT(AND(
ISPICKVAL(Finance_Partner__c, &quot;&quot;),
ISBLANK(Finance_Partner_Account__c)
)),
Buyout_Sales_Tax__c,
0
),
0
),
2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount (TCV) that will be owed by a customer, inclusive of all sales tax and shipping and handling.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>