force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-16585</description>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPQ Quotes (Bill to Account)</relationshipLabel>
    <relationshipName>CPQ_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>