force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-16585</description>
    <label>Bill to Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_to_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CPQ Quotes (Bill to Contact)</relationshipLabel>
    <relationshipName>CPQ_Quotes_Bill_to_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>