force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Ann_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Ann_Date__c</fullName>
    <description>Accurately track recurring billing cycles and generate timely invoices based on individual customer billing schedules</description>
    <label>Billing Anniversary Date</label>
    <type>Date</type>
</CustomField>