force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Billing_Emails__c</fullName>
    <description>Holds additional Billing Emails as comma separated text values. This field is synced into Netsuite when the Sales Order is created</description>
    <inlineHelpText>If needed, add multiple emails here separated by commas. This will override the account billing email for invoicing.</inlineHelpText>
    <label>Billing Email(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>