force-app/main/default/objects/SBQQ__Quote__c/fields/Blended_Discount__c.field-meta.xml
<CustomField>
    <fullName>Blended_Discount__c</fullName>
    <formula>IF(
 List_Amount_Rebate__c &gt; 0, 
 ((List_Amount_Rebate__c - (Net_Amount_Rebate__c - (Buyout_Amount__c +  Subsidy_Amount__c )))/ List_Amount_Rebate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>