force-app/main/default/objects/SBQQ__Quote__c/fields/Blended_License_Discount__c.field-meta.xml
<CustomField>
    <fullName>Blended_License_Discount__c</fullName>
    <label>Blended License Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>