force-app/main/default/objects/SBQQ__Quote__c/fields/Buyout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Amount__c</fullName>
    <label>Sum of Buyouts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>