force-app/main/default/objects/SBQQ__Quote__c/fields/Buyout_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Authorized__c</fullName>
    <formula>ISPICKVAL(Selected_Payment_Type__c, &apos;Upfront Payments&apos;)</formula>
    <inlineHelpText>Buyouts are only authorized for customers paying upfront or financed through a 3rd party.  Buyouts are not authorized for customers paying monthly or annually</inlineHelpText>
    <label>Buyout Authorized check</label>
    <type>Checkbox</type>
</CustomField>