force-app/main/default/objects/SBQQ__Quote__c/fields/Buyout_Incumbent_Provider__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Incumbent_Provider__c</fullName>
    <label>Buyout Incumbent Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Providers</valueSetName>
    </valueSet>
</CustomField>