force-app/main/default/objects/SBQQ__Quote__c/fields/Bypass_Multiline__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Multiline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Multiline</label>
    <type>Checkbox</type>
</CustomField>