force-app/main/default/objects/SBQQ__Quote__c/fields/BypassQuoteToOptySynDate__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteToOptySynDate__c</fullName>
    <label>BypassQuoteToOptySynDate</label>
    <type>DateTime</type>
</CustomField>