force-app/main/default/objects/SBQQ__Quote__c/fields/CalculatedSubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>CalculatedSubscriptionTerm__c</fullName>
    <formula>CEILING(

/*YEAR*/
((YEAR(SBQQ__EndDate__c)-YEAR(SBQQ__StartDate__c))*12) +

/*MONTH*/
(MONTH(SBQQ__EndDate__c)-MONTH(SBQQ__StartDate__c)) +

/*DAY*/
(DAY(SBQQ__EndDate__c)-DAY(SBQQ__StartDate__c)+1)/

/*DAYS IN MONTH END DATE*/
(DAY(
DATE(
YEAR(SBQQ__EndDate__c),
IF(MONTH(SBQQ__EndDate__c) + 1=13,1,MONTH(SBQQ__EndDate__c) + 1),
1)
- 1))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalculatedSubscriptionTerm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>