force-app/main/default/objects/SBQQ__Quote__c/fields/Camera_Only_Deal__c.field-meta.xml
<CustomField>
    <fullName>Camera_Only_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camera Only Deal</label>
    <type>Checkbox</type>
</CustomField>