force-app/main/default/objects/SBQQ__Quote__c/fields/Channel_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Discount__c</fullName>
    <description>GTMS-6421: This field will hold the partner discount that is set on the partner account record.</description>
    <label>Channel Partner Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>