force-app/main/default/objects/SBQQ__Quote__c/fields/Checkout_Discount__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Discount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Checkout Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>