force-app/main/default/objects/SBQQ__Quote__c/fields/ClonedQuoteAppendName__c.field-meta.xml
<CustomField>
    <fullName>ClonedQuoteAppendName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClonedQuoteAppendName</label>
    <type>Checkbox</type>
</CustomField>