force-app/main/default/objects/SBQQ__Quote__c/fields/Competitor_Buyout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Buyout_Amount__c</fullName>
    <label>Competitor Buyout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>