force-app/main/default/objects/SBQQ__Quote__c/fields/Consolidated_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Billing_Email__c</fullName>
    <inlineHelpText>The Consolidated Billing Email is the contact who will receive the invoices for this order. It is populated first by the Billing Email(s) field on the quote; if blank, then it is populated from the Billing_Email field on the Bill To Account</inlineHelpText>
    <label>Consolidated Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>