force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>IF( NOT(ISBLANK(SBQQ__MasterContract__r.EndDate)), SBQQ__MasterContract__r.EndDate , SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.EndDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>