force-app/main/default/objects/SBQQ__Quote__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <formula>SBQQ__Opportunity2__r.Account.Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Limit is on a monthly basis but is tied to the approved payment type and NOT Direct Monthly-specific</inlineHelpText>
    <label>Max Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>