force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_License_Term__c</fullName>
    <description>field used by managers and sales ops to set custom term lengths outside of the standard 36, 48, 60 terms</description>
    <label>Custom License Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>