force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_Terms__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms__c</fullName>
    <label>Custom Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>