force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Payment_Method__c</fullName>
    <inlineHelpText>For Partner or Reseller transactions, choose Check or Wire as the payment method.
For direct customer transactions with Due in Advance terms, use Credit Card or ACH (EMEA: SEPA or BACS) only.
If the payment method selected is Credit Card or ACH Debit (EMEA: SEPA or BACS), the checkout link must be completed to finalize the payment.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card/ACH Debit</fullName>
            </value>
            <value>
                <fullName>Check/Wire</fullName>
            </value>
            <value>
                <fullName>BACS</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Check</fullName>
                <isActive>false</isActive>
                <label>Check</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
                <isActive>false</isActive>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Wire</fullName>
                <isActive>false</isActive>
                <label>Wire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>