force-app/main/default/objects/SBQQ__Quote__c/fields/DateToday__c.field-meta.xml
<CustomField>
    <fullName>DateToday__c</fullName>
    <formula>TEXT(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateToday</label>
    <type>Text</type>
</CustomField>