force-app/main/default/objects/SBQQ__Quote__c/fields/DCA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DCA_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-25987</description>
    <label>DCA Enabled</label>
    <type>Checkbox</type>
</CustomField>