force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Competitors_dependent_other__c.field-meta.xml
<CustomField>
    <fullName>Deal_Competitors_dependent_other__c</fullName>
    <description>GTMS-15663</description>
    <label>Deal Competitors dependent other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>