force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Health__c.field-meta.xml
<CustomField>
    <fullName>Deal_Health__c</fullName>
    <label>Deal Health</label>
    <length>24</length>
    <type>Text</type>
</CustomField>