force-app/main/default/objects/SBQQ__Quote__c/fields/Director_Approval__c.field-meta.xml
<CustomField>
    <fullName>Director_Approval__c</fullName>
    <formula>OR(
AND(
Selected_Payment_Type_Group_2__c,
(Blended_Discount__c * 100) &lt;= 25

),
AND(
Selected_Payment_Type_Group_1__c,
(Blended_Discount__c * 100) &lt;= 35
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director_Approval</label>
    <type>Checkbox</type>
</CustomField>