force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Process__c</fullName>
    <label>Discount Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>