force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Required__c</fullName>
    <formula>IF( Discount_Approval_Needed__c = TRUE, IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Yes:&quot;,20,20)+ &quot; Preview Approvals After Saving&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;No:&quot;, 20, 20) + &quot; No Approval Needed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Approved?</label>
    <type>Text</type>
</CustomField>