force-app/main/default/objects/SBQQ__Quote__c/fields/Discounted_Hardware_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Hardware_Amount__c</fullName>
    <label>Discounted Hardware Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>