force-app/main/default/objects/SBQQ__Quote__c/fields/Discounts_price_points_for_similar_deals__c.field-meta.xml
<CustomField>
    <fullName>Discounts_price_points_for_similar_deals__c</fullName>
    <description>added for GTMS-13640</description>
    <label>Discounts/price points for similar deals</label>
    <type>TextArea</type>
</CustomField>