force-app/main/default/objects/SBQQ__Quote__c/fields/Does_3PF_require_approval__c.field-meta.xml
<CustomField>
    <fullName>Does_3PF_require_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does 3PF require approval</label>
    <type>Checkbox</type>
</CustomField>