force-app/main/default/objects/SBQQ__Quote__c/fields/Downsell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Downsell_Amount__c</fullName>
    <label>Downsell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>