force-app/main/default/objects/SBQQ__Quote__c/fields/Entry_Criteria_Met_for_Ind_Disc_Blend__c.field-meta.xml
<CustomField>
    <fullName>Entry_Criteria_Met_for_Ind_Disc_Blend__c</fullName>
    <formula>AND(
OR(
Blended_Discount__c &gt; Approved_Discount__c,
AND(
NOT(ISBLANK(Blended_Discount__c)),
ISBLANK(Approved_Discount__c)
)
),
Associated_Opportunity_Type__c = &apos;Revenue Opportunity&apos;,
SBQQ__Opportunity2__r.RecordType.Id = &apos;0121a000000VnAB&apos;,
SBQQ__Opportunity2__r.Account.RecordType.Id != &apos;0121a000000VnIa&apos;,
NOT(CONTAINS( Owner:User.UserRole.Name , &apos;IND ENT AE NA&apos;))

)</formula>
    <label>Entry Criteria Met for Ind. Disc. Blend</label>
    <type>Checkbox</type>
</CustomField>