force-app/main/default/objects/SBQQ__Quote__c/fields/Est_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Shipping_Cost__c</fullName>
    <description>Using Zenkraft API via Mulesoft</description>
    <inlineHelpText>Rollup of Shipping &amp; Handling Details to estimate the total shipping cost of this Quote</inlineHelpText>
    <label>Est. Shipping Cost</label>
    <summarizedField>Shipping_Handling_Detail__c.Shipping_Cost__c</summarizedField>
    <summaryForeignKey>Shipping_Handling_Detail__c.CPQ_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>