force-app/main/default/objects/SBQQ__Quote__c/fields/Estimated_Annual_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Payment__c</fullName>
    <inlineHelpText>Calculates the annualized payments customer will make for licenses only; does not include sales tax.</inlineHelpText>
    <label>Est Annual Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>