force-app/main/default/objects/SBQQ__Quote__c/fields/Estimated_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Payment__c</fullName>
    <formula>IF(AND(NOT(ISNULL(SBQQ__SubscriptionTerm__c)), SBQQ__SubscriptionTerm__c &lt;&gt; 0),
IF(SBQQ__SubscriptionTerm__c &lt; 12, Estimated_Annual_Payment__c / SBQQ__SubscriptionTerm__c,Estimated_Annual_Payment__c / 12),Estimated_Annual_Payment__c/12 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the monthly payments customer will make for licenses only; does not include sales tax.</inlineHelpText>
    <label>Estimated Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>