force-app/main/default/objects/SBQQ__Quote__c/fields/Estimated_Upfront_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Upfront_Amount__c</fullName>
    <inlineHelpText>The cost of hardware a customer pays upfront; This amount is after discounting. It does not include sales tax.</inlineHelpText>
    <label>Upfront HW Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>