force-app/main/default/objects/SBQQ__Quote__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>TODAY() + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>