force-app/main/default/objects/SBQQ__Quote__c/fields/Express_Agreement_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Express_Agreement_Accepted_Date__c</fullName>
    <label>Express Agreement Accepted Date</label>
    <type>Date</type>
</CustomField>