force-app/main/default/objects/SBQQ__Quote__c/fields/Express_Selected_Discount__c.field-meta.xml
<CustomField>
    <fullName>Express_Selected_Discount__c</fullName>
    <label>Express Selected Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>