force-app/main/default/objects/SBQQ__Quote__c/fields/Finance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner__c</fullName>
    <label>Finance Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell Financial Services</fullName>
            </value>
            <value>
                <fullName>Pathward, National Association</fullName>
            </value>
            <value>
                <fullName>Samsara Capital Finance</fullName>
                <default>true</default>
                <label>Samsara Capital Finance</label>
            </value>
            <value>
                <fullName>Ascentium</fullName>
            </value>
            <value>
                <fullName>Howard Carter Lease Ltd.</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>LEAF Capital Funding LLC</fullName>
            </value>
            <value>
                <fullName>PNC Bank, National Association</fullName>
            </value>
            <value>
                <fullName>Crestmark Vendor Finance a Meta Bank Company</fullName>
                <isActive>false</isActive>
                <label>Crestmark Vendor Finance a Meta Bank Company</label>
            </value>
            <value>
                <fullName>Maxim Transportation Service</fullName>
                <isActive>false</isActive>
                <label>Maxim Transportation Service</label>
            </value>
            <value>
                <fullName>VAR Technology</fullName>
                <isActive>false</isActive>
                <label>VAR Technology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>