force-app/main/default/objects/SBQQ__Quote__c/fields/Finance_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-16585 Deal Capture Accuracy</description>
    <label>Finance Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Is_Finance_Partner_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPQ Quotes (Finance Partner Account)</relationshipLabel>
    <relationshipName>CPQ_Finance_Partner_Account</relationshipName>
    <type>Lookup</type>
</CustomField>