force-app/main/default/objects/SBQQ__Quote__c/fields/Finance_Partner_Quote__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner_Quote__c</fullName>
    <formula>SBQQ__Opportunity2__r.Finance_Partner_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Partner Contact</label>
    <type>Text</type>
</CustomField>